--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/tech.svg" />
+    <link rel="icon" type="image/svg+xml" href="/hand-type.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="portfolio website" />
+    <meta name="keywords" content="portfolio" />
     <title>Yassir Aterta</title>
   </head>
   <body>
