--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="portfolio" />
     <title>Yassir Aterta</title>
   </head>
-  <body>
+  <body class="font-main">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
