--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/hand-type.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="portfolio website" />
+    <meta name="description" content="portfolio yassir aterta" />
     <meta name="keywords" content="portfolio" />
     <title>Yassir Aterta</title>
   </head>
-  <body class="font-main">
+  <body class="font-main overflow-x-hidden bg-neutral-950 text-gray-50">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
