style: modify contact section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="keywords" content="portfolio" />
     <title>Yassir Aterta</title>
   </head>
-  <body class="font-main overflow-x-hidden bg-neutral-950 text-gray-50">
+  <body
+    class="font-main relative overflow-x-hidden bg-neutral-950 text-gray-50"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
