refactor: add new meta keywords to the head

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/hand-type.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio Front-End Developer" />
     <meta
-      name="description"
-      content="Portfolio yassir aterta Front-End Developer"
+      name="keywords"
+      content="portfolio yassir aterta Front-End Developer"
     />
-    <meta name="keywords" content="portfolio" />
     <title>Yassir Aterta</title>
   </head>
   <body
