style: change color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Yassir Aterta</title>
   </head>
   <body
-    class="font-main relative overflow-x-hidden bg-neutral-950 text-gray-50"
+    class="font-main relative overflow-x-hidden bg-neutral-950 text-neutral-50"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
